# HOFlow

./: .gitignore  CMakeLists.txt  Makefile  MakefileDebug  README.md  bashrc  notes.txt  periodic3d.g
doc/: Doxyfile
include/: AlgTraits.h  Algorithm.h  AlgorithmDriver.h  AlgorithmElementInfoSupplier.h  AlgorithmElementInterface.h  AssembleElemSolverAlgorithm.h  AssembleFaceElemSolverAlgorithm.h  AssembleNodalGradAlgorithmDriver.h  AssembleNodalGradBoundaryAlgorithm.h  AssembleNodalGradElemAlgorithm.h  AssembleNodeSolverAlgorithm.h  AssemblePNGBoundarySolverAlgorithm.h  AssembleScalarDirichletBCSolverAlgorithm.h  AssembleScalarElemDiffSolverAlgorithm.h  AssembleScalarElemDiffSolverAlgorithmNalu.h  AssembleScalarFluxBCSolverAlgorithm.h  AssembleScalarFluxBCSolverAlgorithmNalu.h  AuxFunction.h  AuxFunctionAlgorithm.h  BoundaryCondition.h  BoundaryConditions.h  BuildTemplates.h  ComputeGeometryAlgorithmDriver.h  ComputeGeometryBoundaryAlgorithm.h  ComputeGeometryInteriorAlgorithm.h  ConstantAusFunction.h  ConstantAuxFunction.h  ConstantBCAuxFunctionAlgorithm.h  CopyAndInterleave.h  CopyFieldAlgorithm.h  DirichletBC.h  ElemDataRequests.h  Enums.h  EquationSystem.h  EquationSystems.h  FORTRAN_Proto.h  FieldFunctions.h  FieldTypeDef.h  HOFlowEnv.h  HOFlowParsing.h  (+37 more)
include/element_promotion/: LagrangeBasis.h  QuadratureRule.h
include/kernel/: Kernel.h  KernelBuilder.h  KernelBuilderLog.h
include/master_element/: Edge2DSCS.h  Hex8GeometryFunctions.h  MasterElement.h  MasterElementFactory.h  MasterElementFunctions.h  MasterElementUtils.h  TensorOps.h  Tet4CVFEM.h  Tri2DSCV.h  Tri32DCVFEM.h  Tri3DSCS.h
include/utils/: StkHelpers.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: Algorithm.cpp  AlgorithmDriver.cpp  AlgorithmElementInfoSupplier.cpp  AlgorithmElementInterface.cpp  AssembleElemSolverAlgorithm.cpp  AssembleFaceElemSolverAlgorithm.cpp  AssembleNodalGradAlgorithmDriver.cpp  AssembleNodalGradBoundaryAlgorithm.cpp  AssembleNodalGradElemAlgorithm.cpp  AssembleNodeSolverAlgorithm.cpp  AssemblePNGBoundarySolverAlgorithm.cpp  AssembleScalarDirichletBCSolverAlgorithm.cpp  AssembleScalarElemDiffSolverAlgorithm.cpp  AssembleScalarElemDiffSolverAlgorithmNalu.cpp  AssembleScalarFluxBCSolverAlgorithm.cpp  AssembleScalarFluxBCSolverAlgorithmNalu.cpp  AuxFunction.cpp  AuxFunctionAlgorithm.cpp  BoundaryCondition.cpp  BoundaryConditions.cpp  ComputeGeometryAlgorithmDriver.cpp  ComputeGeometryBoundaryAlgorithm.cpp  ComputeGeometryInteriorAlgorithm.cpp  ConstantAusFunction.cpp  ConstantAuxFunction.cpp  ConstantBCAuxFunctionAlgorithm.cpp  CopyFieldAlgorithm.cpp  DirichletBC.cpp  ElemDataRequests.cpp  EquationSystem.cpp  EquationSystems.cpp  FieldFunctions.cpp  HOFlowEnv.cpp  HOFlowParsing.cpp  HOFlowParsingHelper.cpp  HeatCondEquationSystem.cpp  HeatCondMassBDF2NodeSuppAlg.cpp  HeatCondMassBackwardEulerNodeSuppAlg.cpp  InitialCondition.cpp  InitialConditions.cpp  (+27 more)
src/element_promotion/: LagrangeBasis.cpp  QuadratureRule.cpp
src/kernel/: KernelBuilderLog.cpp
src/master_element/: CalculateHexVolume.F  Edge2DSCS.cpp  MasterElement.cpp  MasterElementFactory.cpp  MasterElementUtils.cpp  Tet4CVFEM.cpp  Tri2DSCV.cpp  Tri32DCVFEM.cpp  Tri3DSCS.cpp
testcases/naluCube/: my.i  my_consolidated.i  w_options_neumann.e  with_options.e  with_options_neumann.e  wo_options.e  wo_options_neumann.e
testcases/tet3square/: HeatCondEQS-G-0.gra.1.0  HeatCondEQS-G-0.mm.1  HeatCondEQS-G-0.mm.1.0  HeatCondEQS-G-0.rhs.1.0  HeatCondEQS-O-0.mm.1  HeatCondEQS-O-0.mm.1.0  HeatCondEQS-O-0.rhs.1  HeatCondEQS-O-0.rhs.1.0  HeatCondEQS-O-0.sln.1  HeatCondEQS-O-0.sln.1.0  femHC.e  hf_output.e  hf_output_large.e  hf_output_large_nalu.e  hf_output_small.e  hf_output_small_nalu.e  hf_output_verylarge.e  hf_output_verylarge_nalu.e  input.i  nalu.i  nalu_consolidated.i  nalu_output.e  rhs_vector-O-0.gra.1.0  rhs_vector-O-0.mm.1  rhs_vector-O-0.mm.1.0  rhs_vector-O-0.rhs.1  rhs_vector-O-0.rhs.1.0  solution.e  solution2.e  tet3square.exo  tet3square_large.exo  tet3square_small.exo  tet3square_verylarge.exo
testcases/tet4Cube/: femHC.e  hf_output.e  input.i  tet4Cube.exo
testcases/tet4cylinder/: input.i
tutorials/myBox/: input.i  slab.exo
tutorials/myCube/: femHC.e  input.i  myCube.exo
